bootstrap removed; not used classes removed

--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.scss
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.scss
@@ -1,4 +1,8 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+@import "src/styles";
+
+*{
+  font-family: $base-font;
+}
 
 .pagination-previous,.pagination-next{
   display: inline-block;
