--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -320,3 +320,8 @@ img {
   display: -ms-flexbox !important;
   display: flex !important;
 }
+
+.lead {
+  font-size: 1.25rem;
+  font-weight: 300;
+}
