--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -1,6 +1,6 @@
 <!-- custom -->
 <div *ngIf="!published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
-  <h1 class="jumbotron-heading">My validations</h1>
+  <h1>My validations</h1>
   <p *ngIf="!validations" class="lead text-muted">
     You have not started any validations yet. Visit the <a routerLink="/validate">validation page</a>
     to start your own validation run.
@@ -9,7 +9,7 @@
 
 <!-- published -->
 <div *ngIf="published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
-  <h1 class="jumbotron-heading">Published validations</h1>
+  <h1>Published validations</h1>
   <p class="lead text-muted">
     The QA4SM validations below have been published by their owners to <a target="_blank" href="https://zenodo.org/">Zenodo</a>
     and
@@ -22,7 +22,7 @@
 </div>
 
 <!-- Rows -->
-<div class="card-deck mb-3">
+<div class="card-deck p-mb-3">
   <div class="container p-mb-5 p-mt-4" style="max-width: 60rem;">
     <div *ngFor="let valrun of validations  | paginate :
         {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
