--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.scss
@@ -1,4 +1,3 @@
-@import "~bootstrap/dist/css/bootstrap.css";
 @import "src/styles";
 
 .dropdown {
@@ -20,7 +19,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: $dropdown-buttons-background;
   color: #495057;
   min-width: 160px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -33,8 +32,17 @@
 
 .dropdown:hover .dropdownbutton {-webkit-transform: scale(1.1);}
 
-.dropdown-item.navbar-btn-active {
-  color: initial;
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
 }
 
 .dropdown-item:active, .dropdown-item:focus, .dropdown-item:hover {
