--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -54,6 +54,10 @@ h4, .h4 {
   font-size: 1.5rem;
 }
 
+h5, .h5 {
+  font-size: 1.25rem;
+}
+
 .font-weight-normal {
   font-weight: 400 !important;
 }
