--- a/UI/src/style.variables.scss
+++ b/UI/src/style.variables.scss
@@ -3,3 +3,5 @@ $base-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Ar
 $button-base-color: #4760E5;
 $button-hover-color: #213FE0;
 $edit-name-button-backgroud-color: #00AAE3;
+$dropdown-buttons-background:  #f1f1f1;
+
