--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -1,8 +1,8 @@
-<div class="p-grid no-gutters">
-  <p-panel *ngIf="validationRun$ | async as validationRun" id="result_summary" class="p-col-12">
+<main class="p-grid p-mx-0">
+  <p-panel *ngIf="validationRun$ | async as validationRun" class="p-col-12">
     <ng-template pTemplate="header">
       <div class="text-center" style="width:100%">
-        <h4 class="my-0 font-weight-normal">
+        <h4 class="p-my-0 font-weight-normal">
           Summary:
           <span *ngIf="validationRun.is_unpublished && validationRun.isOwner">
           <span *ngIf="hideElement" class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}} </span>
@@ -41,12 +41,12 @@
           </span>
         </span>
           <span *ngIf="!validationRun.is_unpublished"
-                class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+                class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
             <span class="no_name_change_info pi pi-question-circle help-icon"
                   title="Validation has been published. There is no possibility of changing its name."> </span>
             </span>
           <span *ngIf="!validationRun.isOwner"
-                class="my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
+                class="p-my-0 font-weight-normal no_edit_name">{{validationRun.name_tag}}
             <span class="no_name_change_info pi pi-question-circle help-icon"
                   title="Validation belongs to another user. There is no possibility of changing its name."> </span>
             </span>
@@ -172,11 +172,11 @@
 
         </li>
         <li *ngIf="validationRun.doi">
-          <span class="fas fa-book"></span> This result was published on zenodo with DOI
+          <span class="pi pi-book"></span> This result was published on zenodo with DOI
           <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
         </li>
       </ul>
       <qa-buttons [validationList]="false" [validationRun]="validationRun"></qa-buttons>
     </div>
   </p-panel>
-</div>
+</main>
