--- a/UI/src/app/pages/login/login.component.scss
+++ b/UI/src/app/pages/login/login.component.scss
@@ -1,1 +1,14 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+//this one will have to be moved to the global styles, but first tests are needed
+.center{
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  justify-content: center;
+}
+
+button{
+  width: 12rem;
+}
