--- a/UI/src/app/pages/validation-result/validation-result.component.html
+++ b/UI/src/app/pages/validation-result/validation-result.component.html
@@ -1,3 +1,4 @@
+<main>
 <div class="p-grid">
   <div class="p-col-12">
     <div *ngIf="(validationModel.validationRun|async) as validationRun" class="p-d-flex p-jc-center">
@@ -5,13 +6,13 @@
 
       <div *ngIf="!validationRun.end_time" class="container p-text-center mb-5 mt-4"
            style="max-width: 40rem;">
-        <h1 class="jumbotron-heading">Validation Running...</h1>
+        <h1>Validation Running...</h1>
         <p class="lead text-muted">
           Your validation is still running. You'll be notified via e-mail once it's finished.</p>
         <p class="lead text-muted">You don't have to keep this page open for the validation to run.</p>
       </div>
 
-      <div *ngIf="validationRun.end_time" class="container mb-5 mt-4"
+      <div *ngIf="validationRun.end_time" class="container p-mb-5 p-mt-4"
            style="max-width: 60rem;">
         <h1 class="text-center">Validation Results</h1>
         <div class="p-col-12">
@@ -29,4 +30,4 @@
     </div>
   </div>
 </div>
-
+</main>
