--- a/UI/src/app/pages/login/login.component.scss
+++ b/UI/src/app/pages/login/login.component.scss
@@ -1,5 +1,7 @@
 //this one will have to be moved to the global styles, but first tests are needed
 .center{
+  width: 100%;
+  height: 100%;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
@@ -7,6 +9,7 @@
   margin-right: -15px;
   margin-left: -15px;
   justify-content: center;
+  text-align: center;
 }
 
 button{
