--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -6,10 +6,6 @@
 //@import "~bootstrap/dist/css/bootstrap.css";
 
 main {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
   text-align: left;
   width: 100%;
   margin: auto;
@@ -184,7 +180,6 @@ h5, .h5 {
 }
 
 .container {
-  min-width: 992px !important;
   width: 100%;
   padding-right: 15px;
   padding-left: 15px;
@@ -320,7 +315,7 @@ img {
   }
 }
 
-@media (min-width: 576px) {
+@media screen and (min-width: 576px) {
   .col-sm {
     -ms-flex-preferred-size: 0;
     flex-basis: 0;
@@ -369,15 +364,14 @@ img {
     flex-wrap: nowrap;
   }
 
-  table {
-    //background-color: red;
-    display: block;
-  }
-
+  //table {
+  //  //background-color: red;
+  //  display: block;
+  //}
 }
 
 
-@media (max-width: 767.98px) {
+@media screen and (max-width: 767.98px) {
   .navbar-expand-md > .container,
   .navbar-expand-md > .container-fluid, .navbar-expand-md > .container-sm, .navbar-expand-md > .container-md, .navbar-expand-md > .container-lg, .navbar-expand-md > .container-xl {
     padding-right: 0;
@@ -392,7 +386,7 @@ img {
 
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container, .container-sm, .container-md {
     max-width: 720px;
   }
@@ -403,7 +397,7 @@ img {
 
 }
 
-@media (max-width: 991.98px) {
+@media screen and (max-width: 991.98px) {
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid, .navbar-expand-lg > .container-sm, .navbar-expand-lg > .container-md, .navbar-expand-lg > .container-lg, .navbar-expand-lg > .container-xl {
     padding-right: 0;
@@ -416,7 +410,7 @@ img {
 
 }
 
-@media (min-width: 992px) {
+@media screen and (min-width: 992px) {
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid, .navbar-expand-lg > .container-sm, .navbar-expand-lg > .container-md, .navbar-expand-lg > .container-lg, .navbar-expand-lg > .container-xl {
     -ms-flex-wrap: nowrap;
@@ -429,8 +423,7 @@ img {
 
 }
 
-
-@media (max-width: 1199.98px) {
+@media screen and (max-width: 1199.98px) {
   .navbar-expand-xl > .container,
   .navbar-expand-xl > .container-fluid, .navbar-expand-xl > .container-sm, .navbar-expand-xl > .container-md, .navbar-expand-xl > .container-lg, .navbar-expand-xl > .container-xl {
     padding-right: 0;
@@ -438,7 +431,7 @@ img {
   }
 }
 
-@media (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .navbar-expand-xl > .container,
   .navbar-expand-xl > .container-fluid, .navbar-expand-xl > .container-sm, .navbar-expand-xl > .container-md, .navbar-expand-xl > .container-lg, .navbar-expand-xl > .container-xl {
     -ms-flex-wrap: nowrap;
