--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6067,6 +6067,7 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   margin-right: 0.2rem;
   background-color: #4760E5;
   border-color: #4760E5;
+  margin-bottom: 0.1rem;
 }
 
 .btn-action.p-button:hover, .btn-action-large.p-button:hover, .btn-action-home.p-button:hover{
