New UI styling (#221)
* h5 styling added from bootstrap

* bootstrap removed from validation-summary component

* bootstrap removed from login component; some bootstrap styles added to global styling

* bootstrap removed from published validations

* bootstrap removed from published validation results

* centering issue fixed

* not needed class removed

* main component styled

* buttons on home page styled

* some styling removed

* margin added so that buttons look good on mobile devices

* some code refinement done; added object-fit property for images in carousel; some styling for mobile devices applied

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -6060,7 +6060,17 @@ p-togglebutton.ng-dirty.ng-invalid > .p-togglebutton.p-button {
   border-color: #4760E5;
 }
 
-.btn-action.p-button:hover, .btn-action-large.p-button:hover{
+.btn-action-home.p-button{
+  width: 8rem;
+  height: 3rem;
+  font-size: 1.25rem;
+  margin-right: 0.2rem;
+  background-color: #4760E5;
+  border-color: #4760E5;
+  margin-bottom: 0.1rem;
+}
+
+.btn-action.p-button:hover, .btn-action-large.p-button:hover, .btn-action-home.p-button:hover{
   background-color: #213FE0;
   border-color: #213FE0;
 }
