--- a/UI/src/app/pages/home/home.component.scss
+++ b/UI/src/app/pages/home/home.component.scss
@@ -1,4 +1,3 @@
-//@import "~bootstrap/dist/css/bootstrap.css";
 @import "src/style.variables";
 @import "src/styles";
 
@@ -6,7 +5,10 @@
   font-family: $base-font;
   line-height: 1.5rem;
 }
-
+main{
+  max-width: 100%;
+  min-width: 100%;
+}
 .scaled_image {
   display: block;
   max-width: 100%;
@@ -19,18 +21,11 @@
   margin-bottom: 0.5rem;
   position: relative;
 }
-
-.image-attribution {
-  color: white;
-  text-shadow: 0 0 .1rem black, 0 0 .5rem black;
-  position: relative;
-  bottom: 30px;
-  z-index: 200;
-  margin-left: 0.5rem;
-  width: 10%;
+.carousel img{
+  object-fit: cover;
 }
 
-.carousel-img>img {
+.carousel-img > img {
   margin: 0 auto;
 }
 
@@ -40,19 +35,6 @@
   margin-bottom: 0.5rem;
   max-width: 100%;
   max-height: 100%;
-}
-
-.textbox > h3 {
-  font-size: min(max(20px, 1.5vw), 30px);
-}
-
-.textbox > h1 {
-  text-shadow: .15rem .15rem .15rem rgba(0, 0, 0, .5);
-  font-size: min(max(30px, 3vw), 40px);
-}
-
-.carousel-indicators{
-  z-index: 1;
 }
 
 .carousel-caption {
@@ -75,19 +57,37 @@
   z-index: 1;
 }
 
+span.carousel-desc {
+  line-height: 3rem;
+}
+
+.carousel-indicators {
+  z-index: 1;
+}
+
+
+.image-attribution {
+  color: white;
+  text-shadow: 0 0 .1rem black, 0 0 .5rem black;
+  position: relative;
+  bottom: 30px;
+  z-index: 200;
+  margin-left: 0.5rem;
+  width: 10%;
+}
+
+
+.textbox > h3 {
+  font-size: min(max(20px, 1.5vw), 30px);
+}
+
+.textbox > h1 {
+  text-shadow: .15rem .15rem .15rem rgba(0, 0, 0, .5);
+  font-size: min(max(30px, 3vw), 40px);
+}
 
 .image-attribution > a {
   color: #ffffff;
-}
-
-svg rect {
-  fill: gray;
-}
-
-svg text {
-  fill: yellow;
-  font: 12px sans-serif;
-  text-anchor: end;
 }
 
 .overflow {
@@ -121,15 +121,17 @@ svg text {
   transition: 0.3s;
 }
 
-#workflow:hover {opacity: 0.7;}
+#workflow:hover {
+  opacity: 0.7;
+}
 
 .container-marketing {
-  max-width:80rem;
+  max-width: 80rem;
   margin: auto;
 }
 
-.featurette-divider{
-  max-width:80rem;
+.featurette-divider {
+  max-width: 80rem;
 }
 
 .textbox {
@@ -155,88 +157,13 @@ svg text {
   opacity: 0.7;
 }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-}
-
-/* Modal Content (Image) */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-}
-
-/* Caption of Modal Image (Image Text) - Same Width as the Image */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
-}
-
-/* Add Animation - Zoom in the Modal */
-.modal-content, #caption {
-  animation-name: zoom;
-  animation-duration: 0.6s;
-}
-
-@keyframes zoom {
-  from {transform:scale(0)}
-  to {transform:scale(1)}
-}
-
-/* The Close Button */
-.modalClose {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-
-.modalClose:hover,
-.modalClose:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 1000px){
-  .modal-content {
-    width: 100%;
-  }
-}
-
 .container-marketing {
-  max-width:80rem;
+  max-width: 80rem;
   margin: auto;
 }
 
 .news {
   background-color: #CEEBF6;
-}
-
-.text-muted {
-  color: #6c757d !important;
 }
 
 .list li::before, .news li::before {
@@ -249,4 +176,35 @@ svg text {
 
 .list li, .news li {
   display: block;
+}
+
+a:hover {
+  color: white;
+  text-decoration: none;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 575.9px) {
+  .textbox > h3 {
+    display: none;
+  }
+  .textbox > h1 {
+    font-size: min(max(30px, 3vw), 40px);
+  }
+  span.carousel-desc{
+    display: none;
+  }
+  //.btn-action-home{
+  //  margin-bottom: 0.1rem;
+  //}
+}
+
+@media screen and (min-width: 576px) and (max-width: 712px){
+  span.carousel-desc{
+    display: none;
+  }
+  //
+  //.btn-action-home{
+  //  width: 7.5rem;
+  //}
 }
