preventing autofilling added

--- a/UI/src/app/modules/user/user-form/user-form.component.html
+++ b/UI/src/app/modules/user/user-form/user-form.component.html
@@ -19,7 +19,7 @@
 
       <div class="p-py-3">
         <span class="p-float-label">
-          <input class="form-field" id="password" type="password" pInputText formControlName="password1">
+          <input class="form-field" id="password" type="password" pInputText formControlName="password1" autocomplete="new-password">
           <label for="password">Password</label>
           <span title="Your password can't be too similar to your other personal information.Your password must contain at least 8 characters. Your password can't be a commonly used password. Your password can't be entirely numeric."
                 class="pi pi-question-circle">
