--- a/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
+++ b/UI/src/app/modules/comparison/components/table-comparison/table-comparison.component.html
@@ -1,30 +1,28 @@
-<div *ngIf="(comparisonTable$|async) as table" class="p-grid no-gutters">
-  <div class="p-col-12">
-    <p-panel [toggleable]="true" [collapsed]="true">
-      <ng-template pTemplate="header">
-        <div class="text-center my-1" style="width: 92%">
-          <h4 class="my-0 font-weight-normal">Comparison summary</h4>
-        </div>
-      </ng-template>
-      <ng-template pTemplate="icons">
-        <label class="mb-0" pTooltip="Expand this section to inspect a table with the metric-wise difference of the two datasets."
-               tooltipPosition="bottom">
-          <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
-        </label>
-      </ng-template>
-      <div class="pb-3"> Shown are the median values for each metric in the two comparison datasets, and their difference.</div>
-      <div class="pb-3">
-      <span [innerHtml]="table | dompurify"></span>
-      <div class="d-flex justify-content-between align-items-center">
-        <button type="button"
-                style="width: 12rem;"
-                class="btn btn-sm btn-primary"
-                title="Download the table to a .csv file"
-                (click)="getComparisonTableAsCsv()">
-          <span class="pi pi-download"></span> Download .csv table
-        </button>
+<div *ngIf="(comparisonTable$|async) as table" class="p-col-12">
+  <p-panel [toggleable]="true" [collapsed]="true">
+    <ng-template pTemplate="header">
+      <div class="text-center my-1" style="width: 92%">
+        <h4 class="my-0 font-weight-normal">Comparison statistics</h4>
       </div>
-      </div>
-    </p-panel>
-  </div>
+    </ng-template>
+    <ng-template pTemplate="icons">
+      <label class="mb-0" pTooltip="Expand this section to inspect a table with the metric-wise difference of the two datasets."
+             tooltipPosition="bottom">
+        <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
+      </label>
+    </ng-template>
+    <div class="pb-3"> Shown are the median values for each metric in the two comparison datasets, and their difference.</div>
+    <div class="pb-3">
+    <span [innerHtml]="table | dompurify"></span>
+    <div class="d-flex justify-content-between align-items-center">
+      <button type="button"
+              style="width: 12rem;"
+              class="btn btn-sm btn-primary"
+              title="Download the table to a .csv file"
+              (click)="getComparisonTableAsCsv()">
+        <span class="pi pi-download"></span> Download .csv table
+      </button>
+    </div>
+    </div>
+  </p-panel>
 </div>
