--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -15,9 +15,16 @@
 
   <!--   validations selection   -->
     <qa-validation-selector></qa-validation-selector>
-  <!--  table section  -->
-    <qa-table-comparison></qa-table-comparison>
-  <!--  plots section  -->
-    <qa-plots></qa-plots>
+    <div class="container mb-5 mt-4"
+         style="max-width: 60rem;">
+    <!--    visualize the validation extent-->
+      <qa-extent-visualization></qa-extent-visualization>
+    <!--   summary of the selected comparison  -->
+    <!--    <qa-comparison-summary></qa-comparison-summary>-->
+    <!--  table section  -->
+      <qa-table-comparison></qa-table-comparison>
+    <!--  plots section  -->
+      <qa-plots></qa-plots>
+    </div>
   </div>
 </div>
